--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,11 @@ script:
   - go test github.com/pelletier/go-toml/query
   - ./benchmark.sh $TRAVIS_BRANCH https://github.com/$TRAVIS_REPO_SLUG.git
 
+deploy:
+  provider: script
+  script: ./fuzzit.sh
+  on:
+    condition: $TRAVIS_GO_VERSION =~ ^1\.12
+
 after_success:
   - bash <(curl -s https://codecov.io/bash)
